[package]
name = "specify"
version = "0.1.0"
edition = "2021"

[lib]
proc_macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { git = "https://github.com/iced-rs/iced", rev = "cb395ab" }
proc-macro2 = "1.0.43"
quote = "1.0.21"
serde = "1.0.144"
serde_json = "1.0.85"
windows = {version = "0.39.0", features = ["Win32_System_Com", "Win32_System_TaskScheduler", "Win32_System_Ole", "Win32_Foundation", "Win32_System_Services", "Win32_Security"] }
winreg = "0.10.1"
wmi = "0.11.1"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

# optimizing for size, see https://github.com/johnthagen/min-sized-rust
[profile.release]
strip = true #strip symbols from bianary
opt-level = "z" # tell the compiler to optimize for size
lto = true # enable link time optimization
codegen-units = 1 # default of 16, this will slow compile times but allow more size reduction
