[package]
name = "specify-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = {version = "0.39.0", features = ["Win32_System_Com", "Win32_System_TaskScheduler", "Win32_System_Ole", "Win32_Foundation"] }
winreg = "0.10.1"
wmi = "0.11.1"

# optimizing for size, see https://github.com/johnthagen/min-sized-rust
[profile.release]
strip = true #strip symbols from bianary
opt-level = "z" # tell the compiler to optimize for size
lto = true # enable link time optimization
codegen-units = 1 # default of 16, this will slow compile times but allow more size reduction
